--- a/mineSweeper/minesweeper.html
+++ b/mineSweeper/minesweeper.html
@@ -1,4 +1,3 @@
-
 <?xml version = "1.0" encoding = "utf-8"?>
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
@@ -8,6 +7,8 @@
 
 
 <!-- MineSweeper by Hanh Pham-->
+<!-- Tested for Chrome -->
+
 
 
 
